fixed the alignments of the hero section

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .logo {
   font-size: 28px;
   color: #f9faf8;
-  padding: 16px 0;
+  margin: 10px 32px;
 }
 
 .links {
@@ -31,25 +31,35 @@ body {
 }
 
 .hero-container {
-  width: 400px;
-  height: 500px;
+  display: flex;
+  justify-content: center;
+  margin: 60px 0;
   /* border: 2px solid red; */
-  margin-left: 490px;
-  margin-top: 100px;
+  gap: 120px;
 }
 
-.hero > h1 {
+.hero {
+  /* width: 400px; */
+  /* margin: 0 100px; */
+  /* height: 300px; */
+  /* border: 2px solid rgb(159, 108, 53); */
+  /* margin-left: 490px;
+  margin-top: 100px; */
+}
+
+.hero-main {
   font-size: 48px;
   font-weight: bolder;
   color: #f9faf8;
 }
 
-.hero > p {
+.hero-secondary {
   font-size: 18px;
   color: #e5e7eb;
 }
 
 .hero > button {
+  margin: 10px 0;
   background-color: #3882f6;
   border: none;
   padding: 10px;
@@ -57,6 +67,16 @@ body {
   font-size: 14px;
   width: 120px;
   color: #f9faf8;
+}
+
+.image-placeholder-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  /* margin: 0 10px; */
+  border: 2px solid green;
+  background-color: #e5e7eb;
 }
 
 .random {
@@ -120,17 +140,37 @@ body {
   border-radius: 10px;
   color: #e5e7eb;
   font-size: 18px;
+  /* display: flex;
+  justify-content: space-around; */
+}
+
+.blue-banner {
   display: flex;
   justify-content: space-around;
 }
 
-.blue-banner {
+.text-container {
+  margin: 60px 0;
+}
+
+.text-container > .large-header {
+  font-size: 38px;
 }
 
 .button-container {
-  /* display: flex;
-  justify-content: flex-end;
-  margin: 0 20px; */
+  /* display: flex; */
+  /* justify-content: flex-end; */
+  margin: 60px;
+  padding: 20px;
+}
+.button-container > button {
+  border: 2px solid #f9faf8;
+  background-color: #3882f6;
+  padding: 10px;
+  border-radius: 6px;
+  font-size: 14px;
+  width: 120px;
+  color: #f9faf8;
 }
 
 .footer {
